--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
     "name": "flowise-components",
-    "version": "1.2.11",
+    "version": "1.2.12",
     "description": "Flowiseai Components",
     "main": "dist/src/index",
     "types": "dist/src/index.d.ts",
@@ -28,9 +28,10 @@
         "d3-dsv": "2",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
+        "faiss-node": "^0.2.1",
         "form-data": "^4.0.0",
         "graphql": "^16.6.0",
-        "langchain": "^0.0.84",
+        "langchain": "^0.0.91",
         "linkifyjs": "^4.1.1",
         "mammoth": "^1.5.1",
         "moment": "^2.29.3",
