--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
     "name": "flowise-components",
-    "version": "1.3.2",
+    "version": "1.3.3",
     "description": "Flowiseai Components",
     "main": "dist/src/index",
     "types": "dist/src/index.d.ts",
@@ -26,19 +26,21 @@
         "@qdrant/js-client-rest": "^1.2.2",
         "@supabase/supabase-js": "^2.29.0",
         "@types/js-yaml": "^4.0.5",
+        "apify-client": "^2.7.1",
         "@types/jsdom": "^21.1.1",
         "axios": "^0.27.2",
         "cheerio": "^1.0.0-rc.12",
-        "chromadb": "^1.4.2",
+        "chromadb": "^1.5.3",
         "cohere-ai": "^6.2.0",
         "d3-dsv": "2",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "faiss-node": "^0.2.2",
         "form-data": "^4.0.0",
+        "google-auth-library": "^9.0.0",
         "graphql": "^16.6.0",
         "html-to-text": "^9.0.5",
-        "langchain": "^0.0.117",
+        "langchain": "^0.0.122",
         "linkifyjs": "^4.1.1",
         "mammoth": "^1.5.1",
         "moment": "^2.29.3",
